tests/errors/tc_expr_input_nomsg.lx
@module "main"

pub const main -> fn () int {
    input<int>("hello", 42);
    return 0;
}
